# StatPulse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  database.py  logging.py
app/engines/: __init__.py
app/engines/event/: classifier.py  normalizer.py
app/engines/notification/: __init__.py  dispatcher.py
app/models/: __init__.py  competition.py  enums.py  event.py  match.py  notification_log.py  player.py  preference.py  provider_state.py  team.py  user.py
app/providers/: __init__.py  api_football.py  base.py  sportapi7.py
app/scheduler/: __init__.py  jobs.py  worker.py
app/telegram/: __init__.py  bot.py  services.py  services_live.py
app/telegram/handlers/: __init__.py  help.py  live.py  preferences.py  start.py
tests/: test_health.py  test_integration_spain_belgium.py  test_live_services.py  test_notification.py  test_providers.py  test_providers_sportapi7.py  test_scheduler.py  test_telegram.py
