[project]
name = "statpulse"
version = "0.1.0"
description = "Plataforma de inteligência esportiva em tempo real (Telegram-first)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "ruff>=0.6.0"]

[project.scripts]
statpulse-bot = "app.telegram.bot:main"
statpulse-worker = "app.scheduler.worker:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
